[package]
name = "cuda-cache"
version = "0.1.0"
edition = "2021"
description = "LRU cache with TTL and namespace isolation"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Lucineer/cuda-cache"
readme = "README.md"
keywords = ["ai", "fleet", "agent", "rust"]
categories = ["science"]

[dependencies]
serde = { version = "1", features = ["derive"] }

